[a11y] fix contrast issue in PLACES archive link

--- a/src/assets/scss/content/homepage/sections/section.places.scss
+++ b/src/assets/scss/content/homepage/sections/section.places.scss
@@ -155,7 +155,7 @@
 
                 @include typo( 0.5rem, 0.075em );
 
-                @include color( white, 0.325 );
+                @include color( white, 0.000 );
 
                 transform: translate3d( 0, 0, 0 );
 
